# switchloom

./: .betterleaks.toml  .forbidden-paths.regex  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  alchemy.run.ts  astro.config.ts  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release-candidate.yml  release-npm-recovery.yml  release.yml  secret-scan.yml
docs/: codex-v2-runtime-evidence.json  migration-baseline.md  migration-manifest.tsv  model-routing-policy.md  ownership.md  package-policy.md  planr-hard-cut-handoff.md  prepublish-certification-0.2.2.md  prepublish-certification-0.3.0.md  prepublish-certification-0.3.1.md  preset-composition.md  preset-evaluation.md  preset-registry.md  routing-efficiency-pilot.md  routing-quality-comparison.md  v0.3.0-migration-characterization.md
evaluations/: preset-suite-v1.toml  sol-terra-luna-codex-v2.toml
fixtures/codex-doctor-v0.3.2/: README.md  applied-semantic-recipe.toml  authenticated-spawn-oracle.json  expected-v0.3.2-doctor.json  intentionally-broken-v2-flags.toml  same-package-repository-provenance.json
fixtures/codex-v2-runtime-evidence/: codex-0.145-after-without-version.txt  invalid-arbitrary-prose-provenance.json  invalid-prose-only-provenance.json  (+2 more)
host-bindings/: claude-native.toml  codex-openai.toml  cursor-fable-grok.toml  cursor-openai.toml  mixed-host.toml  opencode-native.toml  pi-external.toml
npm/: cli-toctou.test.mjs  model-routing.test.mjs  package-inventory.test.mjs
scripts/: build-release.sh  build-site.mjs  check-alchemy-runtime.mjs  check-evidence-validator-parity.mjs  check-migration-manifest.sh  check-v0.3.0-migration-gate.sh  cloudflare-test.mjs  codex-standalone-oracle.sh  compare-routing-pilot.mjs  compare-routing-pilot.test.mjs  extract-routing-pilot-telemetry.mjs  extract-routing-pilot-telemetry.test.mjs  generate-formula.sh  native-host-certification-oracle.sh  npm-pack-check.sh  offline-verification-suite.sh  opencode-native-oracle.sh  pi-external-oracle.sh  planr-adapter-oracle.sh  prepare-routing-pilot-workspace.mjs  regenerate-preset-catalog.mjs  release.sh  run-routing-pilot-codex.mjs  run-routing-pilot-codex.test.mjs  secleak-check.sh  test-verify-release-archive.sh  validate-codex-doctor-v0.3.2-fixtures.mjs  validate-codex-runtime-evidence.mjs  validate-codex-runtime-evidence.test.mjs  validate-codex-spawn-state.mjs  validate-codex-spawn-state.test.mjs  validate-native-provenance.mjs  validate-opencode-runtime-evidence.mjs  validate-opencode-runtime-evidence.test.mjs  validate-pi-runtime-evidence.mjs  validate-pi-runtime-evidence.test.mjs  validate-routing-pilot.mjs  verify-cloudflare-website.mjs  verify-generator-live.mjs  verify-release-archive.sh  (+1 more)
src/: cli.rs  config.rs  contracts.rs  error.rs  evidence.rs  hosts.rs  integrations.rs  lib.rs  lifecycle.rs  main.rs  registry.rs  routing.rs
tests/: host_contract.rs  lifecycle_contract.rs  routing_contract.rs
usage-policies/: balanced.toml  low-usage.toml  max-quality.toml  read-only-audit.toml
website/: _headers  alchemy-runtime.test.mjs  app.mjs  build-site.test.mjs  catalog-model.mjs  catalog-model.test.mjs  cloudflare-launcher.test.mjs  index.html  serve.mjs  static-copy.test.mjs  styles.css
xtask/: Cargo.toml  command-ownership.toml
xtask/src/: main.rs  release.rs
xtask/src/certify/: codex.rs  codex_spawn.rs  live.rs  mod.rs  opencode.rs  pi.rs  runner.rs  tests.rs
(+145 files in other folders)
