[package]
name = "model-routing"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Deterministic model routing for coding agents"
repository = "https://github.com/instructa/switchloom"
homepage = "https://github.com/instructa/switchloom"
documentation = "https://github.com/instructa/switchloom/tree/main/docs"
readme = "README.md"
keywords = ["agents", "routing", "codex", "claude", "cursor"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".planr/**",
  ".claude/**",
  ".codex/**",
  ".cursor/**",
  "dist/**",
  "reports/**",
  "tmp/**",
  "npm/native/**",
  "**/*.sqlite",
  "**/*.sqlite-*",
  "**/*receipt*",
  "**/*credential*",
  "**/*secret*",
]

[[bin]]
name = "model-routing"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
correctness = "deny"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
