[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/instructa/switchloom"
homepage = "https://github.com/instructa/switchloom"
documentation = "https://github.com/instructa/switchloom/tree/main/docs"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "1.1"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"

[package]
name = "model-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic model routing for coding agents"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["agents", "routing", "codex", "claude", "cursor"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".planr/**",
  ".claude/**",
  ".codex/**",
  ".cursor/**",
  "xtask/**",
  "scripts/**",
  "dist/**",
  "docs/prepublish-certification-*.md",
  "reports/**",
  "retained-evidence/**",
  "tmp/**",
  "npm/native/**",
  "**/*.sqlite",
  "**/*.sqlite-*",
  "**/*receipt*",
  "**/*credential*",
  "**/*secret*",
]

[[bin]]
name = "model-routing"
path = "src/main.rs"

[[bin]]
name = "switchloom"
path = "src/bin/switchloom.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto = "thin"
