[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
model-routing = { path = "..", version = "0.3.1" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
